fix/update backend structure, fifo implementation, user type verification, reconciliation, add tests
