# backend/src/main/java/io/github/jackhudsonn/jaakd/dto/TradeResponse.java
@@ -1,10 +1,0 @@
-package io.github.jackhudsonn.jaakd.dto;
-
-import java.util.UUID;
-
-public record TradeResponse(
-        UUID tradeId,
-        UUID holdingId,
-        UUID orderLogId
-) {
-}
